adding entites